core/tests/snapshots/snapshot_tests__snapshot_tests__pick_watching.snap
---
source: tests/snapshot_tests.rs
assertion_line: 164
expression: snap
---
[
  {
    "rank": 1,
    "champion_key": "Ekko",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 2,
    "champion_key": "Ahri",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 3,
    "champion_key": "Irelia",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 4,
    "champion_key": "Vi",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 5,
    "champion_key": "Shaco",
    "tier": "C",
    "confidence": "low"
  }
]
